--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <div class="row">
       <div class="large-12 columns">
-        <h1>FlowClock</h1>
+        <h1>FlowClock - Mike is a noob</h1>
         <br>
         <div id="flowClockContainer"></div>
       </div>
