--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
       d3.json("test_data.json", function(error, root) {
 
-        console.log(clockName, taskNames, taskLengths);
+        //console.log(clockName, taskNames, taskLengths);
 
         var clockData = "{ 'name': 'clock', 'children': [{'name': " + taskNames[0] + ", 'size': " + taskLengths[0] + "}, {'name': " + taskNames[1] + ", 'size': " + taskLengths[1] + "}]}";
 
