--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </script>
 
     <script>
-    function createClock(clockName, taskNames, taskLengths){
+    function createClock(taskNames, taskLengths){
 
       var margin = {top: 350, right: 480, bottom: 350, left: 480},
           radius = Math.min(margin.top, margin.right, margin.bottom, margin.left) - 10;
