--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
 
         console.log(clockName, taskNames, taskLengths);
 
-        var clockData = "{ 'name': '" + clockName + "', 'children': [{'name': '" + taskNames[0] + "', 'size': " + taskLengths[0] + "}, {'name': 
-        '" + taskNames[1] + "', 'size': " + taskLengths[1] + "}]}";
+        var clockData = "{ 'name': '" + clockName + "', 'children': [{'name': '" + taskNames[0] + "', 'size': " + taskLengths[0] + "}, {'name': '" + taskNames[1] + "', 'size': " + taskLengths[1] + "}]}";
 
         root = eval("(" + clockData + ")");
 
