--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
             .data(partition.nodes(root).slice(1))
           .enter().append("path")
             .attr("d", arc)
+            .attr("id", d.fill)
             .style("fill", function(d) { return d.fill; })
             .each(function(d) { this._current = updateArc(d); })
             .on("click", zoomIn);
