--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
       <section class="top-bar-section">
         <!-- Right Nav Section -->
-        <ul class="right">
+        <ul class="right" style="padding-right:10px;">
           <li class="has-dropdown">
             <a href="#">Create</a>
             <ul class="dropdown">
