--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <script>
     var clockInterval;
 
-    function createClock(selector, clockName, taskNames, taskLengths){
+    function createClock(clockName, taskNames, taskLengths){
 
       var margin = {top: 350, right: 480, bottom: 350, left: 480},
           radius = Math.min(margin.top, margin.right, margin.bottom, margin.left) - 10;
